{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 4349,
  "lineage": "f776cb7b-b36e-a373-5355-c4ed3c088240",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fns_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-051774634d04900d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-051774634d04900d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9bc38fbd9d31bf9",
            "private_dns": "ip-10-0-32-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.32.119",
            "public_dns": "ec2-23-22-40-24.compute-1.amazonaws.com",
            "public_ip": "23.22.40.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0875992ee7e9b5671",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "MAIN"
            },
            "tags_all": {
              "Name": "MAIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fns_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-043f12b3ff34ac4b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-043f12b3ff34ac4b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046bc3ca6eaeac8fd",
            "private_dns": "ip-10-0-36-122.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.36.122",
            "public_dns": "ec2-3-88-63-242.compute-1.amazonaws.com",
            "public_ip": "3.88.63.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c720bf0d99218bb7",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "WORKER-1"
            },
            "tags_all": {
              "Name": "WORKER-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-02c1f0d5115a415d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-02c1f0d5115a415d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d1c786c4e27f64d",
            "private_dns": "ip-10-0-53-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.53.202",
            "public_dns": "ec2-35-172-194-140.compute-1.amazonaws.com",
            "public_ip": "35.172.194.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4e222036261305a",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "WORKER-2"
            },
            "tags_all": {
              "Name": "WORKER-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-03f44c859e9be2eff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-03f44c859e9be2eff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0264df32f23e579ce",
            "private_dns": "ip-10-0-35-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.35.163",
            "public_dns": "ec2-34-228-200-163.compute-1.amazonaws.com",
            "public_ip": "34.228.200.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-070df4585b9909681",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "WORKER-3"
            },
            "tags_all": {
              "Name": "WORKER-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-034acbcee17c5173f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-034acbcee17c5173f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05673ae49062a22e3",
            "private_dns": "ip-10-0-36-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.36.111",
            "public_dns": "ec2-54-221-141-188.compute-1.amazonaws.com",
            "public_ip": "54.221.141.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a037e0de982097cc",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "WORKER-4"
            },
            "tags_all": {
              "Name": "WORKER-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-03c6aae55e8a66be0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-03c6aae55e8a66be0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02df60d97b99cf8aa",
            "private_dns": "ip-10-0-49-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.49.25",
            "public_dns": "ec2-3-93-193-153.compute-1.amazonaws.com",
            "public_ip": "3.93.193.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06261f29778f41aef",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "WORKER-5"
            },
            "tags_all": {
              "Name": "WORKER-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:684302603280:instance/i-04a8d4d5a531d1810",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fns-ec2-s3-instance-profile",
            "id": "i-04a8d4d5a531d1810",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "fns_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010b2f59f125a7a1c",
            "private_dns": "ip-10-0-62-212.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.62.212",
            "public_dns": "ec2-35-175-220-180.compute-1.amazonaws.com",
            "public_ip": "35.175.220.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0345ffc48b08bbe76",
                "volume_size": 900,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b0d20014cc7a9316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0547feeda79df2c9f",
            "tags": {
              "Name": "WORKER-6"
            },
            "tags_all": {
              "Name": "WORKER-6"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d20014cc7a9316"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.fns_ec2_s3_instance_profile",
            "aws_iam_role.fns_ec2_s3_role",
            "aws_s3_bucket.fns_bucket_code",
            "aws_s3_bucket.fns_bucket_find",
            "aws_s3_object.fns_bucket_code_uploaded",
            "aws_security_group.fns_sg",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fns_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684302603280:internet-gateway/igw-05f7eca887b7d70c4",
            "id": "igw-05f7eca887b7d70c4",
            "owner_id": "684302603280",
            "tags": {
              "Name": "fns-gateway"
            },
            "tags_all": {
              "Name": "fns-gateway"
            },
            "vpc_id": "vpc-0d7ec4a47c0269f77"
          },
          "dependencies": [
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fns_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684302603280:route-table/rtb-05520c3ac36ee8d8d",
            "id": "rtb-05520c3ac36ee8d8d",
            "owner_id": "684302603280",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f7eca887b7d70c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fns-route-table"
            },
            "tags_all": {
              "Name": "fns-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7ec4a47c0269f77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fns_gateway",
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fns_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a08fcad2fb52d11",
            "route_table_id": "rtb-05520c3ac36ee8d8d",
            "subnet_id": "subnet-0547feeda79df2c9f"
          },
          "dependencies": [
            "aws_internet_gateway.fns_gateway",
            "aws_route_table.fns_route_table",
            "aws_subnet.fns_subnet",
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fns_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684302603280:security-group/sg-0b0d20014cc7a9316",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0d20014cc7a9316",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fns-sg-allow-all",
            "name_prefix": "",
            "owner_id": "684302603280",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7ec4a47c0269f77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fns_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684302603280:subnet/subnet-0547feeda79df2c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0547feeda79df2c9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684302603280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fns-subnet"
            },
            "tags_all": {
              "Name": "fns-subnet"
            },
            "vpc_id": "vpc-0d7ec4a47c0269f77"
          },
          "dependencies": [
            "aws_vpc.fns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fns_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684302603280:vpc/vpc-0d7ec4a47c0269f77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f4f0c35e66d4b94",
            "default_route_table_id": "rtb-08d8d919600ddd63d",
            "default_security_group_id": "sg-0417019667276f08e",
            "dhcp_options_id": "dopt-05bf47f9c9244bfd1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7ec4a47c0269f77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d8d919600ddd63d",
            "owner_id": "684302603280",
            "tags": {
              "Name": "fns-vpc"
            },
            "tags_all": {
              "Name": "fns-vpc"
            }
          }
        }
      ]
    }
  ]
}